--- a/index.html
+++ b/index.html
@@ -1,238 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Starz-N-Black | Nonprofit Organization</title>
 
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      background: #000;
-      color: #fff;
-      overflow-x: hidden;
-    }
-
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
-
-    /* ===== STAR BACKGROUND ===== */
-    .stars {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      background: radial-gradient(circle, gold 1px, transparent 1px);
-      background-size: 40px 40px;
-      opacity: 0.15;
-      z-index: -1;
-      animation: moveStars 60s linear infinite;
-    }
-
-    @keyframes moveStars {
-      from { background-position: 0 0; }
-      to { background-position: 1000px 1000px; }
-    }
-
-    /* ===== HERO ===== */
-    .hero {
+      font-family: Arial, sans-serif;
+      background: black;
+      color: white;
       text-align: center;
-      padding: 100px 20px;
-      background: linear-gradient(to bottom, #000, #111);
     }
 
-    .hero img {
-      max-width: 90%;
-      border-radius: 20px;
-      box-shadow: 0 0 40px gold;
-      animation: fadeIn 2s ease;
-    }
-
-    .hero h1 {
-      font-size: 3rem;
-      margin-top: 30px;
+    h1, h2 {
       color: gold;
     }
 
-    .hero p {
-      max-width: 700px;
-      margin: 20px auto;
-      font-size: 1.2rem;
-      opacity: 0.9;
+    section {
+      padding: 60px 20px;
     }
 
-    .buttons {
+    img {
+      max-width: 90%;
       margin-top: 30px;
+      border-radius: 16px;
+      box-shadow: 0 0 20px gold;
     }
 
     .btn {
       display: inline-block;
+      margin: 15px;
       padding: 15px 30px;
-      margin: 10px;
       background: gold;
       color: black;
       border-radius: 30px;
       font-weight: bold;
-      transition: transform 0.3s, box-shadow 0.3s;
+      text-decoration: none;
     }
 
     .btn:hover {
-      transform: scale(1.1);
-      box-shadow: 0 0 20px gold;
-    }
-
-    /* ===== SECTIONS ===== */
-    section {
-      padding: 80px 20px;
-      text-align: center;
-    }
-
-    section h2 {
-      font-size: 2.5rem;
-      color: gold;
-      margin-bottom: 20px;
-    }
-
-    section p {
-      max-width: 800px;
-      margin: auto;
-      font-size: 1.1rem;
-      line-height: 1.6;
-    }
-
-    section img {
-      max-width: 80%;
-      margin-top: 40px;
-      border-radius: 20px;
-      box-shadow: 0 0 30px rgba(255,215,0,0.5);
-    }
-
-    /* ===== SERVICES ===== */
-    .services {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 30px;
-      max-width: 1000px;
-      margin: 50px auto 0;
-    }
-
-    .card {
-      background: #111;
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px rgba(255,215,0,0.3);
-      transition: transform 0.3s;
-    }
-
-    .card:hover {
-      transform: translateY(-10px);
-    }
-
-    .card h3 {
-      color: gold;
-      margin-bottom: 10px;
-    }
-
-    /* ===== FOOTER ===== */
-    footer {
-      background: #000;
-      padding: 50px 20px;
-      text-align: center;
-      border-top: 1px solid gold;
-    }
-
-    footer p {
-      margin: 10px 0;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+      box-shadow: 0 0 15px gold;
     }
   </style>
 </head>
 
 <body>
-  <div class="stars"></div>
 
   <!-- HERO -->
-  <div class="hero">
-    <img src="assets/starz-n-black-hero.png" alt="Starz-N-Black Hero Image" />
-
+  <section>
+    <img src="assets/starz-n-black-hero.png" alt="Starz-N-Black Hero">
     <h1>Starz-N-Black</h1>
     <p>
-      A nonprofit organization based in Davenport, Iowa, serving the Quad Cities
-      and surrounding areas through community outreach, compassion, and action.
+      A nonprofit organization based in Davenport, Iowa serving the Quad Cities
+      and surrounding areas through community outreach and compassion.
     </p>
 
-    <div class="buttons">
-      <a href="#donate" class="btn">Support the Mission</a>
-      <a href="#join" class="btn">Join the Team</a>
-    </div>
-  </div>
-
-  <!-- MISSION -->
-  <section>
-    <h2>Our Mission</h2>
-    <p>
-      Starz-N-Black is dedicated to giving back to our community by providing hot
-      meals for the homeless, food pantry support, and resources for families in need.
-      We believe in unity, dignity, and making a lasting impact.
-    </p>
-    <img src="assets/starz-n-black-mission.png" alt="Our Mission" />
+    <a href="#donate" class="btn">Support the Mission</a>
+    <a href="#join" class="btn">Join the Team</a>
   </section>
 
-  <!-- SERVICES -->
+  <!-- COMMUNITY -->
   <section>
-    <h2>What We Do</h2>
-
-    <div class="services">
-      <div class="card">
-        <h3>Hot Meals</h3>
-        <p>Providing warm, nourishing meals to individuals experiencing homelessness.</p>
-      </div>
-
-      <div class="card">
-        <h3>Food Pantry</h3>
-        <p>Distributing food and essentials to families in the Quad Cities area.</p>
-      </div>
-
-      <div class="card">
-        <h3>Community Outreach</h3>
-        <p>Supporting local events, families, and individuals in need.</p>
-      </div>
-    </div>
-
-    <img src="assets/starz-n-black-community.png" alt="Community Support" />
+    <h2>Community Outreach</h2>
+    <p>
+      We provide hot meals for the homeless, food pantry support,
+      and community resources for families in need.
+    </p>
+    <img src="assets/starz-n-black-community.png" alt="Community Outreach">
   </section>
 
-  <!-- FEATURE IMAGE -->
+  <!-- IMPACT -->
   <section>
-    <h2>Making a Difference Together</h2>
+    <h2>Our Impact</h2>
     <p>
-      With the help of volunteers, donors, and community partners, Starz-N-Black
-      continues to shine light where it’s needed most.
+      Through generosity, volunteers, and donors, Starz-N-Black continues
+      to make a difference one act of kindness at a time.
     </p>
-    <img src="assets/starz-n-black-feature.png" alt="Giving Back" />
+    <img src="assets/starz-n-black-impact.png" alt="Starz-N-Black Impact">
   </section>
 
   <!-- CONTACT -->
   <section id="join">
     <h2>Get Involved</h2>
     <p>
-      Want to donate, volunteer, or join the Starz-N-Black team?
-      We’d love to hear from you.
+      Want to donate or join the Starz-N-Black team?
+      Contact us today.
     </p>
   </section>
 
-  <footer id="donate">
+  <section id="donate">
     <p><strong>Founder:</strong> Annette Allen</p>
     <p><strong>Phone:</strong> 563-949-3877</p>
     <p><strong>Email:</strong> Coco.24aa13@gmail.com</p>
     <p>© Starz-N-Black | Davenport, Iowa</p>
-  </footer>
+  </section>
 
 </body>
 </html>
